--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,9 @@
+@import url(shapes.css);
 @font-face {
     font-family: "Circular Std Bold"; 
     src: url(assets/Circular.woff2) format('woff2');
 }
+
 
 @keyframes float {
 	0% {
