--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="d-flex align-items-center justify-content-between p-2 sticky-top bg-blur">
+<div class="d-flex align-items-center justify-content-between p-2 pb-3 bg-blur">
   <div class="ms-2">
     <p class="text-color">Insinia</p>
   </div>
@@ -10,6 +10,21 @@
   </div>
   <div class="me-2">
     <p class="text-color">Login</p>
+  </div>
+</div>
+
+<div class="d-flex bg-color align-items-center justify-content-between bg-blur sticky-top overflow-visible g-0 m-0" *ngIf="navbarStatus" @slideDownHideUp>
+  <div class="ms-2">
+    <p class="text-light">Insinia</p>
+  </div>
+  <div>
+    <a href="/home" class="mx-2 link-light text-decoration-none fw-bolder">Home</a>
+    <a href="/documentation" class="mx-2 link-light text-decoration-none">Test</a>
+    <a href="/register" class="mx-2 link-light text-decoration-none">Lorem</a>
+    <a href="/login" class="mx-2 link-light text-decoration-none">Ipsum</a>
+  </div>
+  <div class="me-2">
+    <p class="text-light">Login</p>
   </div>
 </div>
 
@@ -27,6 +42,7 @@
     </div>
   </div>
 </div>
+
 
 <div class="container-fluid fullscreen-section">
   <div class="row">
