--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -57,6 +57,18 @@
   border-radius: 0.25rem;
 }
 
+.card-custom-alt {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  min-width: 0;
+  word-wrap: break-word;
+  background: rgb(134,79,255);
+  background: linear-gradient(90deg, rgba(80,0,255,1) 0%, rgba(134,79,255,1) 100%);
+  background-clip: border-box;
+  border-radius: 0.25rem;
+}
+
 .text-small {
   font-size: 12px;
 }
