--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -43,7 +43,6 @@
   </div>
 </div>
 
-
 <div class="container-fluid fullscreen-section">
   <div class="row">
     <div class="col-xxl mb-3">
@@ -51,7 +50,7 @@
         <div class="card-body">
           <div class="row px-4">
             <div class="col-6  align-self-center">
-              <h2>¿Qué ofrecemos?</h2>
+              <h1><i class="bi bi-patch-question-fill me-2"></i>¿Qué ofrecemos?</h1>
             </div>
             <div class="col-6 text-end">
               <img class="img-fluid home-hero-card" src="../../assets/svg/colaboration.svg">
@@ -68,7 +67,7 @@
           <div class="row">
             <div class="col ps-4 align-self-center">
               <h2><i class="bi bi-patch-check-fill me-2"></i>Organización</h2>
-              <h3>Una genial manera de manejar organizar, cambiar y editar.</h3>
+              <p>Una genial manera de manejar organizar, cambiar y editar.</p>
             </div>
             <div class="col text-end">
               <img class="img-fluid home-hero-card" src="../../assets/svg/manage.svg">
@@ -86,7 +85,7 @@
             </div>
             <div class="col pe-4 align-self-center text-end">
               <h2><i class="bi bi-patch-check-fill me-2"></i>Colaboración</h2>
-              <h3>La colaboración es prioridad para nosotros.</h3>
+              <p>La colaboración parte de nosotros y asi lo hemos implementado.</p>
             </div>
           </div>
         </div>
@@ -100,10 +99,10 @@
           <div class="row px-4">
             <div class="col-6  align-self-center">
               <h2><i class="bi bi-patch-check-fill me-2"></i>Facilidad de uso</h2>
-              <h3>Desarrollado para cualquier público.</h3>
+              <p>Desarrollado en mente con para uso escolar, casual y profesional.</p>
             </div>
             <div class="col-6 text-end">
-              <img class="img-fluid home-hero-card" src="../../assets/svg/colaboration.svg">
+              <img class="img-fluid home-hero-card" src="../../assets/svg/easy.svg">
             </div>
           </div>
         </div>
