--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -9,16 +9,8 @@
       /></a>
     </div>
     <!-- <div class="col-1"></div> -->
-    <h1
-      style="
-        color: aliceblue;
-        text-align: center;
-        font-weight: bold;
-        margin-top: 1rem;
-      "
-    >
-      REGISTRO
-    </h1>
+    <h1 class="titulo">REGISTRO</h1>
+    <a [routerLink]="['/login']" class="loginLink">¿Ya tienes cuenta?</a>
     <form [formGroup]="registerForm">
       <div class="form form-group" *ngIf="firstFormActive">
         <div class="col-12 rounded-3 bg-registro">
@@ -217,6 +209,7 @@
                 class="form-control"
                 id="password2"
                 aria-describedby="name"
+                [ngClass]="{ 'is-invalid': submitted && f.password2.errors }"
                 formControlName="password2"
                 placeholder="Repite la contraseña"
                 style="border-left: 4px solid"
@@ -232,7 +225,7 @@
 
               <div
                 *ngIf="f.password2.touched && f.password2.errors"
-                class="alert alert-danger"
+                class="invalid-feedback"
               >
                 <!--                 <div *ngIf="f.password2.errors.required">Password is required.</div>
  -->
