--- a/src/app/user-page/user-page.component.html
+++ b/src/app/user-page/user-page.component.html
@@ -199,6 +199,8 @@
         <br />
       </div>
     </div>
+    <input #pictureProfile type="file" name="pictureProfile" />
+    <button (click)="test()"></button>
   </div>
 </div>
 <div class="row" style="height: 48vh"></div>
