--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="d-flex align-items-center justify-content-between p-2 bg-blur sticky-top" *ngIf="!navbarStatus" @slideDownHideUp>
+<div class="d-flex align-items-center justify-content-between position-fixed w-100 top-0 p-2 bg-blur">
   <div class="ms-2">
     <p class="text-color">Insinia</p>
   </div>
@@ -13,7 +13,7 @@
   </div>
 </div>
 
-<div class="d-flex bg-color align-items-center justify-content-between bg-blur sticky-top p-2" *ngIf="navbarStatus" @slideDownHideUp>
+<div class="d-flex bg-color align-items-center justify-content-between bg-blur w-100 position-fixed top-0 p-2" *ngIf="navbarStatus" @slideDownHideUp>
   <div class="ms-2">
     <p class="text-light">Insinia</p>
   </div>
@@ -35,7 +35,7 @@
     </div>
     <div class="col-xl-4 text-start align-self-center" id="welcome">
       <h1 class="text-color mb-2">Bienvenido a Inisnia</h1>
-      <p class="text-color mb-1">Insinia es un grupo que ha desarrollado la herramienta definitiva para los Rankings. <br> Tanto para uso escolar, casual y profesional.</p>
+      <p class="text-color mb-1">Insinia es un grupo que ha desarrollado la herramienta definitiva para los Rankings.<br> Tanto para uso escolar, casual y profesional.</p>
       <p class="text-small text-muted-color mb-3">Disponible para navegador</p>
       <a class="btn btn-color text-light py-sm-2 px-sm-3 rounded-pill shadow-sm me-2">Comienza</a>
       <a class="btn btn-outline-color py-sm-2 px-sm-3 rounded-pill shadow-sm">Contáctanos</a>
