Obtenemos el token por headers si las credenciales son correctas

--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,4 +1,4 @@
-<div class="backgroundRegister">
+<div class="backgroundRegister" [@fadeIn]>
   <div class="comtainer containerRegister">
     <div class="logoContai">
       <a (click)="goHome()">
