Dar formato xorrecto al codigo

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,51 +1,98 @@
-<div class="d-flex bg-blur align-items-center justify-content-between position-fixed w-100 top-0 p-1 navbar-home" *ngIf="!navbarStatus" @slideDownHideUp>
+<div
+  class="d-flex bg-blur align-items-center justify-content-between position-fixed w-100 top-0 p-1 navbar-home"
+  *ngIf="!navbarStatus"
+  @slideDownHideUp
+>
   <div class="ms-2">
     <p class="text-color">Insinia</p>
   </div>
   <div>
-    <a href="/home" class="mx-2 link-color text-decoration-none fw-bolder">Home</a>
-    <a href="/documentation" class="mx-2 link-color text-decoration-none">Documentación</a>
-    <a href="/register" class="mx-2 link-color text-decoration-none">Register</a>
+    <a href="/home" class="mx-2 link-color text-decoration-none fw-bolder"
+      >Home</a
+    >
+    <a href="/documentation" class="mx-2 link-color text-decoration-none"
+      >Documentación</a
+    >
+    <a href="/register" class="mx-2 link-color text-decoration-none"
+      >Register</a
+    >
     <a href="/login" class="mx-2 link-color text-decoration-none">Login</a>
   </div>
   <div class="me-2">
-    <p class="text-color">
-
-    </p>
+    <p class="text-color"></p>
   </div>
 </div>
 
-<div class="d-flex bg-color align-items-center justify-content-between border-bottom border-1 border-light position-fixed w-100 p-1 top-0 navbar-home" *ngIf="navbarStatus" @slideDownHideUp>
+<div
+  class="d-flex bg-color align-items-center justify-content-between border-bottom border-1 border-light position-fixed w-100 p-1 top-0 navbar-home"
+  *ngIf="navbarStatus"
+  @slideDownHideUp
+>
   <div class="ms-2">
     <p class="text-light">Insinia</p>
   </div>
   <div>
-    <a href="/home" class="mx-2 link-light text-decoration-none fw-bolder">Home</a>
-    <a href="/documentation" class="mx-2 link-light text-decoration-none">Documentación</a>
-    <a href="/register" class="mx-2 link-light text-decoration-none">Register</a>
+    <a href="/home" class="mx-2 link-light text-decoration-none fw-bolder"
+      >Home</a
+    >
+    <a href="/documentation" class="mx-2 link-light text-decoration-none"
+      >Documentación</a
+    >
+    <a href="/register" class="mx-2 link-light text-decoration-none"
+      >Register</a
+    >
     <a href="/login" class="mx-2 link-light text-decoration-none">Login</a>
   </div>
   <div class="me-2">
-    <p class="text-light">
-
-    </p>
+    <p class="text-light"></p>
   </div>
 </div>
 
-<div class="container rounded fullscreen-section skewed-bg pt-5" id="section-land">
+<div
+  class="container rounded fullscreen-section skewed-bg pt-5"
+  id="section-land"
+>
   <div class="container position-absolute top-25 px-5">
-      <div class="row gx-5 align-items-center">
-          <div class="col-lg-6 aos-init text-color aos-animate" data-aos="fade-up">
-              <h1>Bienvenido a Inisnia</h1>
-              <p>Insinia es un grupo que ha desarrollado la herramienta<br> definitiva para creación, edición y manejo de Rankings</p>
-              <p class="text-small text-muted-color mb-3">Disponible para navegador</p>
-              <div class="d-flex flex-column flex-sm-row">
-                  <a routerLink="/login" class="btn btn-lg btn-color text-light fw-500 me-sm-3 mb-3 mb-sm-0">Comienza<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-right ms-2"><line x1="5" y1="12" x2="19" y2="12"></line><polyline points="12 5 19 12 12 19"></polyline></svg></a>
-                  <div class="btn btn-lg link-color fw-500">Contáctanos</div>
-              </div>
-          </div>
-          <div class="col-lg-6 d-none d-lg-block aos-init aos-animate " data-aos="fade-up" data-aos-delay="100"><img class="img-fluid home-hero" src="../../assets/svg/working.svg"></div>
+    <div class="row gx-5 align-items-center">
+      <div class="col-lg-6 aos-init text-color aos-animate" data-aos="fade-up">
+        <h1>Bienvenido a Inisnia</h1>
+        <p>
+          Insinia es un grupo que ha desarrollado la herramienta<br />
+          definitiva para creación, edición y manejo de Rankings
+        </p>
+        <p class="text-small text-muted-color mb-3">
+          Disponible para navegador
+        </p>
+        <div class="d-flex flex-column flex-sm-row">
+          <a
+            routerLink="/login"
+            class="btn btn-lg btn-color text-light fw-500 me-sm-3 mb-3 mb-sm-0"
+            >Comienza<svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              fill="none"
+              stroke="currentColor"
+              stroke-width="2"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              class="feather feather-arrow-right ms-2"
+            >
+              <line x1="5" y1="12" x2="19" y2="12"></line>
+              <polyline points="12 5 19 12 12 19"></polyline></svg
+          ></a>
+          <div class="btn btn-lg link-color fw-500">Contáctanos</div>
+        </div>
       </div>
+      <div
+        class="col-lg-6 d-none d-lg-block aos-init aos-animate"
+        data-aos="fade-up"
+        data-aos-delay="100"
+      >
+        <img class="img-fluid home-hero" src="../../assets/svg/working.svg" />
+      </div>
+    </div>
   </div>
 </div>
 
@@ -59,22 +106,32 @@
         <div class="row">
           <div class="col-xl mb-3">
             <section class="card-home-corp">
-              <h4 class="text-light"><i class="bi bi-building me-2"></i>Organización</h4>
+              <h4 class="text-light">
+                <i class="bi bi-building me-2"></i>Organización
+              </h4>
               <p>Una genial manera de manejar organizar, cambiar y editar.</p>
             </section>
           </div>
           <div class="col-xl mb-3">
             <section class="card-home-corp">
-              <h4 class="text-light"><i class="bi bi-people-fill me-2"></i>Colaboración</h4>
-              <p>La colaboración parte de nosotros y asi lo hemos implementado.</p>
+              <h4 class="text-light">
+                <i class="bi bi-people-fill me-2"></i>Colaboración
+              </h4>
+              <p>
+                La colaboración parte de nosotros y asi lo hemos implementado.
+              </p>
             </section>
           </div>
         </div>
         <div class="row">
           <div class="col">
             <section class="card-home-corp">
-              <h4 class="text-light"><i class="bi bi-hand-thumbs-up-fill me-2"></i>Facilidad de uso</h4>
-              <p>Desarrollado en mente para un uso escolar, casual y profesional.</p>
+              <h4 class="text-light">
+                <i class="bi bi-hand-thumbs-up-fill me-2"></i>Facilidad de uso
+              </h4>
+              <p>
+                Desarrollado en mente para un uso escolar, casual y profesional.
+              </p>
             </section>
           </div>
         </div>
@@ -87,23 +144,60 @@
   <div class="row justify-content-center mb-5">
     <div class="col-8 text-center align-self-center pt-5">
       <h1 class="text-color mb-2">Disponible para los navegadores</h1>
-      <p class="text-small text-muted-color mb-3"><i class="bi bi-exclamation-circle-fill me-2"></i>Es importante utilizar las últimas versiones de estos navegadores</p>
-      <a href="https://brave.com/es/download/"><img src="../../assets/brave.png" class="mx-3 browser" width="50" alt="brave icon"></a>
-      <a href="https://www.opera.com/es/download"><img src="../../assets/opera.png" class="mx-3 browser" width="50" alt="opera icon"></a>
-      <a href="https://www.google.com/intl/es/chrome"><img src="../../assets/chrome.png" class="mx-3 browser" width="50" alt="chrome icon"></a>
-      <a href="https://www.mozilla.org/es-ES/firefox/new/"><img src="../../assets/firefox.png" class="mx-3 browser" width="50" alt="firefox icon"></a>
-      <a href="https://www.microsoft.com/es-es/edge"><img src="../../assets/edge.png" class="mx-3 browser" width="50" alt="edge icon"></a>
+      <p class="text-small text-muted-color mb-3">
+        <i class="bi bi-exclamation-circle-fill me-2"></i>Es importante utilizar
+        las últimas versiones de estos navegadores
+      </p>
+      <a href="https://brave.com/es/download/"
+        ><img
+          src="../../assets/brave.png"
+          class="mx-3 browser"
+          width="50"
+          alt="brave icon"
+      /></a>
+      <a href="https://www.opera.com/es/download"
+        ><img
+          src="../../assets/opera.png"
+          class="mx-3 browser"
+          width="50"
+          alt="opera icon"
+      /></a>
+      <a href="https://www.google.com/intl/es/chrome"
+        ><img
+          src="../../assets/chrome.png"
+          class="mx-3 browser"
+          width="50"
+          alt="chrome icon"
+      /></a>
+      <a href="https://www.mozilla.org/es-ES/firefox/new/"
+        ><img
+          src="../../assets/firefox.png"
+          class="mx-3 browser"
+          width="50"
+          alt="firefox icon"
+      /></a>
+      <a href="https://www.microsoft.com/es-es/edge"
+        ><img
+          src="../../assets/edge.png"
+          class="mx-3 browser"
+          width="50"
+          alt="edge icon"
+      /></a>
     </div>
   </div>
 </div>
 
 <div class="fixed-bottom pe-2 pb-2" *ngIf="goupStatus" @slideInOut>
   <div class="text-end">
-    <a rotuerLink="#welcome-image" class="btn btn-color text-light" id="go-up"><i class="bi bi-arrow-up-circle-fill"></i></a>
+    <a rotuerLink="#welcome-image" class="btn btn-color text-light" id="go-up"
+      ><i class="bi bi-arrow-up-circle-fill"></i
+    ></a>
   </div>
 </div>
 
 <div class="text-center text-color">
   <p class="mb-1">Desarrollado por Insinia</p>
-  <p class="text-small text-muted-color">2022 © Insinia. Todos los derechos reservados.</p>
+  <p class="text-small text-muted-color">
+    2022 © Insinia. Todos los derechos reservados.
+  </p>
 </div>
