--- a/src/app/user-page/user-page.component.html
+++ b/src/app/user-page/user-page.component.html
@@ -144,7 +144,7 @@
             <div class="col-1 filter-icons mx-2" style="cursor: pointer">
               <img
                 class="img-fluid home-hero"
-                src="../../assets/png/world-outline-badged.png"
+                src="../../assets/icons/world-outline-badged.svg"
                 alt=""
                 (click)="destacadosSelected('todo')"
               />
@@ -152,7 +152,7 @@
             <div class="col-1 filter-icons mx-2" style="cursor: pointer">
               <img
                 class="img-fluid home-hero"
-                src="../../assets/png/ranking.png"
+                src="../../assets/icons/ranking.svg"
                 alt=""
                 (click)="destacadosSelected('ranking')"
               />
@@ -161,7 +161,7 @@
               <img
                 (click)="destacadosSelected('logro')"
                 class="img-fluid home-hero"
-                src="../../assets/png/medal-outline.png"
+                src="../../assets/icons/medal-outline.svg"
                 alt=""
               />
             </div>
@@ -195,12 +195,9 @@
             </div>
           </div>
         </div>
-
         <br />
       </div>
     </div>
-    <input #pictureProfile type="file" name="pictureProfile" />
-    <button (click)="test()"></button>
   </div>
 </div>
 <div class="row" style="height: 48vh"></div>
