--- a/src/app/register/register.component.css
+++ b/src/app/register/register.component.css
@@ -35,6 +35,15 @@ input::-webkit-input-placeholder {
       border-radius: 0.2em;
       padding: 5px;
   } */
+.form-control.is-invalid:focus,
+.was-validated .form-control:invalid:focus {
+  border-color: #dc3545 !important;
+  box-shadow: 0 0 0 0.25rem rgb(220 53 69 / 25%);
+}
+
+.form-control:focus {
+  border-color: #17df17 !important;
+}
 
 .containerRegister {
   position: absolute;
