--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -27,9 +27,7 @@
                 style="border-left: 4px solid"
                 [ngStyle]="{
                   'border-left-color':
-                    submitted == true && !f.userName.errors == true
-                      ? '#44df07'
-                      : 'red'
+                    !f.userName.errors == true ? '#44df07' : 'red'
                 }"
               />
 
